--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,13 @@ span{
     padding: 2rem 2.5rem;
     border-radius: 2px;
     display: inline-block;
+    border: 2px solid var(--color-green);
+}
+
+.withUs .heading a:hover{
+    background-color: var(--color-white);
+    color: var(--color-green);
+    border: 2px solid var(--color-green);
 }
 
 /* -----------------------footer-section-CSS-START------------------------------------------ */
